hphp/test/zend/good/tests/lang/bug17115.php
<?php
$func = create_function('','
	static $foo = 0;
	return $foo++;
');
var_dump($func());
var_dump($func());
var_dump($func());
?>