hphp/test/zend/bad/ext/standard/tests/misc/time_nanosleep_error1.php
<?php

$nano = time_nanosleep('A', 100000);

?>